Fix diaries alignment

--- a/src/panels/styles/auth.css
+++ b/src/panels/styles/auth.css
@@ -11,6 +11,7 @@
 }
 
 .authGroup.Div--android {
+    min-height: calc(100vh - 56px);
     height: calc(100% - 56px);
 }
 
