--- a/src/panels/styles/choose_diary.css
+++ b/src/panels/styles/choose_diary.css
@@ -28,7 +28,7 @@
 
 .chooseDiaryScreenDiaryDiaries {
     width: 100%;
-    margin-top: calc(50% - 111px);
+    margin-top: calc(100% - 222px);
 }
 
 .chooseDiaryScreenDiaryContainer {
